--- a/web/admin/src/main/resources/application.yml
+++ b/web/admin/src/main/resources/application.yml
@@ -6,6 +6,9 @@ server:
     include-binding-errors: always
 
 spring:
+  messages:
+      encoding: UTF-8
+      basename: messages/messages
   datasource:
     url: jdbc:mysql://localhost:3306/gobuy?createDatabaseIfNotExist=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     username: root
