--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!--         https://mvnrepository.com/artifact/com.github.librepdf/openpdf -->
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.29</version>
+        </dependency>
+        <!--         https://mvnrepository.com/artifact/net.sf.supercsv/super-csv -->
     </dependencies>
 
     <build>
